added specific user search
